src/test/ui/parser/recover-for-loop-parens-around-head.stderr
error: expected one of `)`, `,`, `@`, or `|`, found keyword `in`
  --> $DIR/recover-for-loop-parens-around-head.rs:10:16
   |
LL |     for ( elem in vec ) {
   |                ^^ expected one of `)`, `,`, `@`, or `|`

error: unexpected parenthesis surrounding `for` loop head
  --> $DIR/recover-for-loop-parens-around-head.rs:10:9
   |
LL |     for ( elem in vec ) {
   |         ^             ^
   |
help: remove parenthesis in `for` loop
   |
LL -     for ( elem in vec ) {
LL +     for  elem in vec  {
   | 

error[E0308]: mismatched types
  --> $DIR/recover-for-loop-parens-around-head.rs:13:38
   |
LL |         const RECOVERY_WITNESS: () = 0;
   |                                      ^ expected `()`, found integer

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0308`.
